QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
------------------------------------------------------

ChangeLog

SVN TRUNK

- First attempt to allow a headless application run mode, without
  GUI or system-tray icon accessibility, with all options given 
  as command line arguments. (EXPERIMENTAL)

- Allow the build system to include an user specified LDFLAGS.


0.1.3  2013-12-31  A fifth of a Jubilee.

- More preparations for Qt5 configure build.

- Added missing blank spaces on some warning messages text lines.

- Preparations for Qt5 migration.


0.1.2  2012-05-22  JACK-MIDI crashfix release.

- JACK MIDI in-bound buffering was originally flawed and often the
  cause for severe random crashes, mostly due to memory corruption,
  now hopefully fixed.

- Changed order of JACK MIDI and UDP socket initialization, hoping
  the later is always owned by the current genuine process.

- JACK MIDI interface were sinking all incoming events into the
  the first port, now fixed (heads up from Chris Goddard, thanks).

- Make(ing) -jN parallel builds now available for the masses.

- Fixed Makefile.in handling of installation directories to the
  configure script eg. --datadir.

- Main context menu simple no-brainer reordering.


0.1.1  2010-09-24  JACK-MIDI bugfix release.

- Fixed serious JACK-MIDI DoS bug, now working as advertised.

- Minor debug mode JACK-MIDI event print out fix.


0.1.0  2010-09-03  Second public release.

- Attain micro-second precision for JACK MIDI timing, through
  home-brew queue sorting pool =)

- Enabling ALSA MIDI and/or JACK MIDI devices is now optional.

- Transparent JACK MIDI support is being introduced. (EXPERIMENTAL)

- Use standard dialog buttons as provided by QDialogButtonBox.

- Context menu is now also triggered when left-clicking on the
  system tray icon.

- Message box title confidence fix (whatever it be:)


0.0.1  2010-03-07  First public release.